another minor styling update

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="tel:1-615-278-9450"
-            ><strong>(615) 278-9450</strong></a
+            ><strong>Resource Air Charter</strong></a
           >
         </li>
       </ul>
@@ -116,23 +116,13 @@
     <div class="card bg-gray mb-5 py-4 text-center shadow">
       <div class="container">
         <div class="card-body">
-          <h3 class="pb-3">Your Air Cargo and Conversion Partner</h3>
-          <div class="row justify-content-center">
-            <p>
+          <h2 class="pb-3">Your Air Cargo and Conversion Partner</h2>
+          <div class="row text-left">
+            <p class="longCopy">
               Resource Air Charter has helped thousands of people ship critical
               goods to destinations all over the world on time, safely, and with
               the highest levels of performance.
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <section id="section-story" class="my-5 py-5">
-      <div class="container">
-        <h2>Our Story</h2>
-        <div class="row">
-          <div>
             <p class="longCopy">
               At Resource Air Charter, we believe in one simple American value:
               you need to get there first with the most. That's why we're proud
@@ -141,7 +131,6 @@
               We adapt and overcome any surprises to accomplish your mission. No
               exceptions. Guaranteed.
             </p>
-            <br />
             <p class="longCopy">
               From the second you call, the race begins and it's not over until
               your shipment arrives safely and securely at its destination. When
@@ -151,7 +140,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <!-- FOOTER -->
 
@@ -280,6 +269,11 @@
             </p>
             <p class="footer-text">
               Production Manufacturers Authority PQ04405CE
+            </p>
+            <p class="footer-text">STC# SA159CH, SA1624GL</p>
+            <p class="footer-text">
+              All air charters not flown by RAC are arranged with FAA approved
+              135 and 121 carriers.
             </p>
           </div>
           <div class="col-md-4">
