--- a/index.html
+++ b/index.html
@@ -109,13 +109,6 @@
             class="row justify-content-center align-items-center text-center pt-5"
           >
             <div class="col-lg-5 p-4 m-4">
-              <a href="/cargo-services" class=""
-                ><img
-                  class="logo-dummy text-center"
-                  src="resources/imgs/logo.jpg"
-                  alt="Resource Air Charter Logo"
-                />
-              </a>
               <h4 class="hero__subtitle text-white">
                 Air Cargo On Demand
               </h4>
@@ -123,15 +116,9 @@
                 We help businesses avoid downtime and save millions of dollars
                 with rapid response air charter services.
               </p>
+              <a href="/cargo-services" class="btn-white">Learn More</a>
             </div>
             <div class="col-lg-5 p-4 m-4">
-              <a href="/rac90" class=""
-                ><img
-                  class="logo-dummy text-center"
-                  src="resources/imgs/logo.jpg"
-                  alt="Resource Air Charter Logo"
-                />
-              </a>
               <h4 class="hero__subtitle text-white">
                 Resource Air Conversions
               </h4>
@@ -139,43 +126,12 @@
                 Discover the latest in air cargo utility with the RAC90, the
                 world's first cargo plane built by cargo operators.
               </p>
+              <a href="/rac90" class="btn-white">Learn More</a>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- TESTING ABOVE COMPARED TO BELOW -->
-    <!-- <section id="head" class="head">
-      <div class="jumbotron jumbotron-fluid home-hero">
-        <div class="container pt-5">
-          <h1 class="text-center">
-            Guaranteed to get you there first with the most.
-          </h1>
-          <div class="row justify-content-center align-items-center pt-5">
-            <div class="col-lg-5 hero__box bg-offwhite p-4 m-4">
-              <h4 class="hero__subtitle">
-                Air Cargo On Demand
-              </h4>
-              <p class="">
-                We help businesses avoid downtime and save millions of dollars
-                with rapid response air charter services.
-              </p>
-              <a href="/cargo-services" class="btn btn-primary">Learn More</a>
-            </div>
-            <div class="col-lg-5 hero__box bg-offwhite p-4 m-4">
-              <h4 class="hero__subtitle">
-                RAC90 Planes For Sale
-              </h4>
-              <p class="">
-                Discover the latest in air cargo utility with the RAC90, the
-                world's first cargo plane built by cargo operators.
-              </p>
-              <a href="/rac90" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <section class="get-quote-button">
       <button
@@ -185,7 +141,6 @@
         data-target="#getQuoteModal"
       >
         Get Quote <br />
-        <!-- <img src="resources/imgs/icons/airplane.png" alt="airplane icon" /> -->
       </button>
     </section>
     <div
@@ -302,120 +257,10 @@
       </div>
     </div>
 
-    <section id="projects" class="projects-section">
-      <div class="container">
-        <!-- Featured Project Row -->
-        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-          <div class="text-center">
-            <h2>Rapid Air Cargo Services</h2>
-            <p class="long-copy">
-              With over 20 years of aviation experience, we've shipped
-              everything from disaster relief supplies in Puerto Rico to live
-              sharks in Las Vegas. We understand that no two shipments are ever
-              the same. Call us today to learn why so many businesses trust Resource Air Charter to guarantee
-              the mission success of their charter delivery.
-            </p>
-          </div>
-        </div>
-      </div>
-
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img
-              class="img-fluid"
-              src="resources/css/imgs/tracker.jpg"
-              alt="cargo tracking service screenshot"
-            />
-          </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div
-                  class="project-text w-100 my-auto text-center text-lg-right"
-                >
-                  <h4>
-                    <a href="/cargo-services" class="service__link"
-                      >Cargo Services</a
-                    >
-                  </h4>
-                  <ul class="service__list text-white-50">
-                    <li>JIT Shipping</li>
-                    <li>AOG Delivery</li>
-                    <li>Organ Transplant</li>
-                    <li>Currency Delivery</li>
-                  </ul>
-                  <hr class="d-none d-lg-block mb-0 mr-0" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img
-              class="img-fluid"
-              src="resources/imgs/plane_reapirs.jpg"
-              alt="front of a RAC90 plane"
-            />
-          </div>
-          <div class="col-lg-6">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div
-                  class="project-text w-100 my-auto text-center text-lg-left"
-                >
-                  <h4>
-                    <a href="/rac90" class="service__link">Fleet Services</a>
-                  </h4>
-                  <ul class="service__list text-white-50">
-                    <li>RAC90 Plane Conversions</li>
-                    <li>RAC90 Maintenance</li>
-                  </ul>
-                  <hr class="d-none d-lg-block mb-0 ml-0" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row justify-content-center no-gutters">
-          <div class="col-lg-6">
-            <img
-              class="img-fluid"
-              src="resources/css/imgs/runway.jpg"
-              alt="View of runway from cockpit at night"
-            />
-          </div>
-          <div class="col-lg-6 order-lg-first">
-            <div class="bg-black text-center h-100 project">
-              <div class="d-flex h-100">
-                <div
-                  class="project-text w-100 my-auto text-center text-lg-right"
-                >
-                  <h4>
-                    <a href="/special-missions" class="service__link"
-                      >Special Missions</a
-                    >
-                  </h4>
-                  <ul class="service__list text-white-50">
-                    <li>Patient Transport</li>
-                    <li>Disaster Relief</li>
-                    <li>Government Contractors</li>
-                  </ul>
-                  <hr class="d-none d-lg-block mb-0 mr-0" />
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section id="section-features" class="section-features py-5">
       <div class="container">
         <div class="container">
-          <h2><span class="emphasis">For when timing is everything</span></h2>
+          <h2>For when timing is everything</h2>
           <div class="row justify-content-center pb-5">
             <p class="long-copy">
               Why miss another critical delivery, another JIT shipment, or
@@ -471,6 +316,115 @@
                 From air to ground to door, our team communicates your
                 shipment's location to you every step of the way.
               </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="projects" class="projects-section">
+      <div class="container">
+        <div class="row align-items-center no-gutters mb-4 mb-lg-5">
+          <div class="text-center">
+            <h2>Rapid Air Cargo Services</h2>
+            <p class="long-copy">
+              With over 20 years of aviation experience, we've shipped
+              everything from disaster relief supplies in Puerto Rico to live
+              sharks in Las Vegas. We understand that no two shipments are ever
+              the same. Call us today to learn why so many businesses trust
+              Resource Air Charter to guarantee the mission success of their
+              charter delivery.
+            </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center no-gutters py-3">
+          <div class="col-lg-6">
+            <img
+              class="img-fluid"
+              src="resources/css/imgs/tracker.jpg"
+              alt="cargo tracking service screenshot"
+            />
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-right"
+                >
+                  <h4>
+                    <a href="/cargo-services" class="service__link"
+                      >Cargo Services</a
+                    >
+                  </h4>
+                  <ul class="service__list">
+                    <li>JIT Shipping</li>
+                    <li>AOG Delivery</li>
+                    <li>Organ Transplant</li>
+                    <li>Currency Delivery</li>
+                  </ul>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center no-gutters py-3">
+          <div class="col-lg-6">
+            <img
+              class="img-fluid"
+              src="resources/imgs/plane_reapirs.jpg"
+              alt="front of a RAC90 plane"
+            />
+          </div>
+          <div class="col-lg-6">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-left"
+                >
+                  <h4>
+                    <a href="/rac90" class="service__link">Fleet Services</a>
+                  </h4>
+                  <ul class="service__list">
+                    <li>RAC90 Plane Conversions</li>
+                    <li>RAC90 Maintenance</li>
+                  </ul>
+                  <hr class="d-none d-lg-block mb-0 ml-0" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center no-gutters py-3">
+          <div class="col-lg-6">
+            <img
+              class="img-fluid"
+              src="resources/css/imgs/runway.jpg"
+              alt="View of runway from cockpit at night"
+            />
+          </div>
+          <div class="col-lg-6 order-lg-first">
+            <div class="bg-black text-center h-100 project">
+              <div class="d-flex h-100">
+                <div
+                  class="project-text w-100 my-auto text-center text-lg-right"
+                >
+                  <h4>
+                    <a href="/special-missions" class="service__link"
+                      >Special Missions</a
+                    >
+                  </h4>
+                  <ul class="service__list">
+                    <li>Patient Transport</li>
+                    <li>Disaster Relief</li>
+                    <li>Government Contractors</li>
+                  </ul>
+                  <hr class="d-none d-lg-block mb-0 mr-0" />
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -670,6 +624,7 @@
             <p class="footer-text">
               Production Manufacturers Authority PQ04405CE
             </p>
+            <p class="footer-text">STC# SA159CH, SA1624GL</p>
             <p class="footer-text">
               All air charters not flown by RAC are arranged with FAA approved
               135 and 121 carriers.
