--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -57,7 +57,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="tel:1-615-278-9450"
-            ><strong>(615) 278-9450</strong></a
+            ><strong>Resource Air Charter</strong></a
           >
         </li>
       </ul>
@@ -301,6 +301,11 @@
             </p>
             <p class="footer-text">
               Production Manufacturers Authority PQ04405CE
+            </p>
+            <p class="footer-text">STC# SA159CH, SA1624GL</p>
+            <p class="footer-text">
+              All air charters not flown by RAC are arranged with FAA approved
+              135 and 121 carriers.
             </p>
           </div>
           <div class="col-md-4">
