--- a/rac90-temp.html
+++ b/rac90-temp.html
@@ -59,7 +59,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="tel:1-615-278-9450"
-            ><strong>(615) 278-9450</strong></a
+            ><strong>Resource Air Charter</strong></a
           >
         </li>
       </ul>
@@ -393,15 +393,20 @@
               </li>
             </ul>
             <p class="footer-text">
-              Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate
-              #LFBA048G
-            </p>
-            <p class="footer-text">
-              50 South Amelia Earheart Drive Brownsville, TX 78521
-            </p>
-            <p class="footer-text">
-              Production Manufacturers Authority PQ04405CE
-            </p>
+                Hangar 10, Inc d/b/a Resource Air Charter per FAA Certificate
+                #LFBA048G
+              </p>
+              <p class="footer-text">
+                50 South Amelia Earheart Drive Brownsville, TX 78521
+              </p>
+              <p class="footer-text">
+                Production Manufacturers Authority PQ04405CE
+              </p>
+              <p class="footer-text">STC# SA159CH, SA1624GL</p>
+              <p class="footer-text">
+                All air charters not flown by RAC are arranged with FAA approved
+                135 and 121 carriers.
+              </p>
           </div>
           <div class="col-md-4">
             <h5>Links</h5>
