--- a/rac90.html
+++ b/rac90.html
@@ -59,7 +59,7 @@
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="tel:1-615-278-9450"
-            ><strong>(615) 278-9450</strong></a
+            ><strong>Resource Air Charter</strong></a
           >
         </li>
       </ul>
@@ -101,7 +101,7 @@
     <section id="head" class="head">
       <div class="jumbotron jumbotron-fluid rac90-hero py-5">
         <div class="container">
-          <h1 class="display-4">RAC90 Plane Conversions</h1>
+          <h1 class="display-4">Resource Air Conversions</h1>
           <hr class="my-4 emphasis" />
           <p class="lead">
             Outdeliver your competition with the most reliable air cargo
@@ -115,7 +115,6 @@
     </section>
 
     <div class="card bg-gray mb-5 py-4 text-center shadow">
-      <!-- <div class="card bg-gray py-4 text-center"> -->
       <div class="container">
         <div class="card-body">
           <h3 class="pb-3">The first cargo plane built by cargo operators</h3>
@@ -140,7 +139,7 @@
             </div>
             <div class="col-md-3">
               <img
-                src="resources/imgs/icons/cargo.png"
+                src="resources/imgs/icons/package.png"
                 class="carousel-image d-block mb-2"
               />
               <div class="pt-2">
@@ -170,9 +169,10 @@
             </h3>
             <p>
               It's time for a new era of cargo aircraft. The RAC90 King Air
-              Cargo Conversion is the new, exclusive air utility tool for cargo
-              operators to reach their destinations faster and more
-              fuel-efficently than ever before.
+              Cargo Conversion is the new, exclusive tool for cargo operators of
+              any size. Built in-house at our facility by a team of dedicated
+              engineers, the RAC90 helps you reach your destinations faster and
+              more fuel-efficently than ever before.
             </p>
             <ul>
               <li>
@@ -198,34 +198,16 @@
               ></a
             >
             <a href="/careers" class="information__link"
-              ><span>Learn To Fly</span></a
+              ><span>Fly With Us</span></a
             >
-            <a href="#" class="information__link"><span>Document</span></a>
-            <a href="#" class="information__link"><span>Link</span></a>
+            <a href="#" class="information__link"
+              ><span>More Information</span></a
+            >
+            <a href="#" class="information__link"><span>Dimensions</span></a>
           </div>
         </div>
       </div>
     </section>
-
-    <!-- <section class="large-panel">
-      <div class="container">
-        <div class="row align-items-center my-5">
-          <div class="col-lg-6 rounded border p-3 bg-offwhite">
-            <h1 class="alt-h1 text-center">
-              Discover The <span class="emphasis">RAC90</span>
-            </h1>
-            <p>
-              Introducing the new, best tool in air utility. With cutting-edge
-              engineering and efficiency, the RAC90 offers unparalleled cargo
-              transportation capabilities for individuals and fleets.
-            </p>
-            <div class="container py-4 text-center">
-              <a href="tel:1-615-278-9450" class="btn btn-primary">Call Now</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
 
     <section class="rac90-panel">
       <div class="container">
@@ -242,22 +224,28 @@
     <section class="lightbox-gallery">
       <div class="gallery">
         <a href="/resources/imgs/rac90_full.jpg" class="big">
-          <img src="/resources/imgs/rac90_full.jpg" alt="fill" />
+          <img src="/resources/imgs/rac90_full.jpg" alt="full view of RAC90" />
         </a>
         <a href="/resources/imgs/rac90_side.jpg" class="big">
-          <img src="/resources/imgs/rac90_side.jpg" alt="fill" />
-        </a>
-        <a href="/resources/imgs/rac90_cockpit.jpg" class="big">
-          <img src="/resources/imgs/rac90_cockpit.jpg" alt="fill" />
-        </a>
-        <a href="/resources/imgs/rac90_back.jpg" class="big">
-          <img src="/resources/imgs/rac90_back.jpg" alt="fill" />
+          <img src="/resources/imgs/rac90_side.jpg" alt="side view of RAC90" />
         </a>
         <a href="/resources/imgs/rac90_front.jpg" class="big">
-          <img src="/resources/imgs/rac90_front.jpg" alt="fill" />
+          <img src="/resources/imgs/rac90_front.jpg" alt="RAC90 from front" />
+        </a>
+        <a href="/resources/imgs/rac90_back.jpg" class="big">
+          <img src="/resources/imgs/rac90_back.jpg" alt="RAC90 from back" />
+        </a>
+        <a href="/resources/imgs/rac90_cargo.jpg" class="big">
+          <img
+            src="/resources/imgs/rac90_cargo.jpg"
+            alt="view of cargo doors"
+          />
         </a>
         <a href="/resources/imgs/rac90_profile.jpg" class="big">
-          <img src="/resources/imgs/rac90_profile.jpg" alt="fill" />
+          <img
+            src="/resources/imgs/rac90_profile.jpg"
+            alt="full profile view of RAC90"
+          />
         </a>
       </div>
     </section>
@@ -273,101 +261,6 @@
 
         <div class="container pt-4 text-center">
           <a href="/contact" class="btn btn-primary">Call Now</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="section-contact my-5 pb-5">
-      <div class="container">
-        <h2>How Can We Help?</h2>
-        <div class="row">
-          <div class="col-lg-12">
-            <form
-              id="contact-form"
-              method="POST"
-              action="contact.php"
-              role="form"
-              class="border rounded p-4"
-            >
-              <div class="messages"></div>
-              <div class="controls">
-                <div class="row">
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label for="contact_name">Name</label>
-                      <input
-                        type="text"
-                        name="name"
-                        id="contact_name"
-                        placeholder="Your name"
-                        class="form-control mt-2"
-                        required="required"
-                        data-error="Name is required."
-                      />
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label for="contact_email">Email</label>
-                      <input
-                        type="email"
-                        name="email"
-                        id="contact_email"
-                        placeholder="Your email"
-                        class="form-control mt-2"
-                        required="required"
-                        data-error="Email is required."
-                      />
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label for="contact_tel">Phone Number</label>
-                      <input
-                        id="contact_tel"
-                        name="tel"
-                        type="tel"
-                        placeholder="Phone"
-                        class="form-control mt-2"
-                        required="required"
-                        data-error="Phone is required."
-                      />
-                      <div class="help-block with-errors"></div>
-                    </div>
-                  </div>
-                  <div class="col-lg-6">
-                    <div class="form-group">
-                      <label for="contact_subject">Subject</label>
-                      <input
-                        type="text"
-                        name="subject"
-                        id="contact_subject"
-                        placeholder="Subject"
-                        class="form-control mt-2"
-                      />
-                    </div>
-                  </div>
-                  <div class="col-12">
-                    <div class="form-group">
-                      <label for="message">Message</label>
-                      <textarea
-                        name="message"
-                        id="message"
-                        placeholder="Additional Message (Optional)"
-                        class="form-control mt-2"
-                        rows="3"
-                      ></textarea>
-                    </div>
-                  </div>
-                  <div class="col-12 mt-3">
-                    <input type="submit" value="Send" class="form-control" />
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
         </div>
       </div>
     </section>
@@ -402,6 +295,11 @@
             </p>
             <p class="footer-text">
               Production Manufacturers Authority PQ04405CE
+            </p>
+            <p class="footer-text">STC# SA159CH, SA1624GL</p>
+            <p class="footer-text">
+              All air charters not flown by RAC are arranged with FAA approved
+              135 and 121 carriers.
             </p>
           </div>
           <div class="col-md-4">
